@@ -10,7 +10,7 @@ FetchPartnerRC::$msg['en'] = array(
 'ftchrclog'.'logpage'			=> "Fetch Partner's 'Recent Changes' Log",
 'ftchrclog'.'logpagetext'		=> 'This is a log of fetch operations',
 'ftchrclog'.'-fetchok-entry'	=> 'Fetching successful',
-'ftchrclog'.'-fetchok-text'		=> "processed $1 entries, filtered $2 entries. The current state is $3.",
+'ftchrclog'.'-fetchok-text'		=> "processed $1, filtered $2 and updated $3 entries. State=$4.",
 'ftchrclog'.'-fetchnc-text'		=> 'no new entry.',
 'ftchrclog'.'-fetchfail-entry'	=> 'Fetching unsuccessful',
 'ftchrclog'.'-fetchfail-text1'	=> 'error accessing URL.',
