@@ -137,4 +137,7 @@ REL1_10_8: (released ...)
 - Added 'RecentChangesManager' extension
 - Adapter 'Job::factory' method to receive custom jobs as per MW1.11
 - Added 'skipcaptcha' right support
-- 
+- Integrated MW1.11 API
+- Added API to rights management process (new namespace NS_API)
+- Updated 'hnpClass' to account for API
+- Added 'FetchPartnerRC' extension (part of Replication functionality which is ongoing)
